fix card grid gap

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -55,10 +55,10 @@
   display: grid;
   grid-template-columns: 415px auto auto;
   grid-template-rows: 1fr 1fr;
-  gap: 0px 0px;
+  gap: 0 20px;
   grid-template-areas:
-    "image name name ."
-    "image before after .";
+    "image name name"
+    "image before after";
 }
 
 .card__image {
